--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("app/tic.jar");
+        await cheerpjRunJar("tic.jar");
       })();
     </script>
   </body>
+
 </html>
