--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("tic.jar");
+        await cheerpjRunJar("tictac.jar");
       })();
     </script>
   </body>
 
 </html>
+
