Fix JAR file path in index.html
Updated the path of the JAR file to 'app/tictactoe.jar'.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 console.log("CheerpJ ready");
                 
                 // Use relative path (no leading slash)
-                await cheerpjRunJar("app/tictac.jar");
+                await cheerpjRunJar("app/tictactoe.jar");
                 
             } catch (error) {
                 console.error("Error:", error);
@@ -26,3 +26,4 @@
     </script>
 </body>
 </html>
+
